IA Dev Page - fix floats so that sections automatically align and adjust margins

--- a/src/scss/ia/_dev.scss
+++ b/src/scss/ia/_dev.scss
@@ -99,7 +99,7 @@ select.available_types {
 #advanced {
     overflow: hidden;
     width: 100%;
-    margin-top: 7em;
+    margin-top: 2em;
     
     .check-txt {
         height: 2.3em;
@@ -108,19 +108,15 @@ select.available_types {
 }
 
 #contributors {
-    margin-bottom: 4em;
+    margin-bottom: 2em;
 }
 
 .ia-single--wide {
     margin-top: 2em;
 }
 
-#contributors {
-    margin-bottom: 0.7em;                
-}
-
 #contributors.fixheight {
-    margin-bottom: 8em;
+    margin-bottom: 7em;
 }
 
 .field-container {
